# satisfactory-world-generator

./: .gitignore  Cargo.toml
scripts/: README-WIN11.md  convert.js  extract-icons-win11-stable.cs  extract-win11-exp.cs  extract.cs
src/app/: constants.rs  icons.rs  mod.rs  outline.rs  plot_item.rs  ui.rs  view_options.rs
