[package]
name = "satisfactory-world-generator"
version = "1.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
egui_plot = "0.35.0"
egui_extras = "0.34.1"

log = "0.4.29"
strum = { version = "0.28.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
itertools = "0.14.0"
rand = "0.10.1"
url = "2.5.8"
serde_urlencoded = "0.7.1"

image = "0.25"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[profile.release]
opt-level = 2

# optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
